BAU: Small code readability improvements and refactors